# unbiased

./: main.py  pyproject.toml  tailwind.config.ts
Backend/Data_Extraction/: .env  Instagram_pages.json  main.py  main_old.py  old main.py  prompts.json
Backend/llm-council/: .env  .gitignore  README.md  config.py  council.py  database.py  dataextract.py  main.py  prompts.json  pyproject.toml  test_council.py
Backend/llm-council/data/conversations/: 1184b733-fb08-4b23-a22f-d7e1a3355d6f.json  231baa98-b2f2-4ef5-8ca4-e6fd7b036fa0.json  3433a81d-21f6-45e5-9d77-38509b817580.json  5c011334-7e5a-4f3b-b3fb-7c29f8e5fd4a.json  74630856-5941-457f-87fb-06eb9a6ee5a2.json  a81c640c-23a1-4d98-bf41-6b800d16b018.json  e6ef3258-61c1-4d20-8c4d-30a5aa46e4da.json
Frontend/src/: App.tsx  index.css
Frontend/src/components/charts/: MongoChart.tsx
Frontend/src/components/dashboard/: BalanceChart.tsx  PostDetailModal.tsx  RecentAnalyses.tsx  UserPostsGrid.tsx
Frontend/src/components/layout/: AppSidebar.tsx  DashboardLayout.tsx
Frontend/src/components/spectrum/: ConfidenceBadge.tsx
Frontend/src/contexts/: AuthContext.tsx
Frontend/src/lib/api/: analysis.ts  (+1 more)
Frontend/src/pages/: Analyze.tsx  Auth.tsx  Balance.tsx  Index.tsx  Settings.tsx
backend/llm-council/: config.py  main.py  pyproject.toml  test_payload.json
src/: App.tsx  index.css
src/components/dashboard/: FeedOverviewCard.tsx  QuickStats.tsx
src/components/layout/: AppSidebar.tsx  DashboardLayout.tsx
src/components/spectrum/: PoliticalSpectrum.tsx
src/pages/: Analyze.tsx  Opposing.tsx  Placeholder.tsx  Track.tsx
