[project]
name = "llm-council"
version = "0.1.0"
description = "Your LLM Council"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pymongo[srv]>=4.16.0",
    "motor>=3.7.1",
    "aiohttp>=3.13.3",
    "supadata>=1.5.0",
    "elevenlabs>=2.30.0",
    "passlib[bcrypt]>=1.7.4",
]
[tool.setuptools]
packages = ["."]
